[gd_scene format=3 uid="uid://bxx6epdn78xfi"]

[ext_resource type="Theme" uid="uid://bt668ikp1cdo" path="res://UI_theme.tres" id="1_ej6pq"]
[ext_resource type="Texture2D" uid="uid://k6aulunnnob8" path="res://img/UI assets (1x).png" id="2_cncom"]
[ext_resource type="Script" uid="uid://c5270vn18khsk" path="res://book_panel.gd" id="3_uhph8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jyko4"]
atlas = ExtResource("2_cncom")
region = Rect2(11, 801, 234, 158)

[node name="BookPanel" type="TextureRect" unique_id=1160056287]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = -1
anchor_left = -0.00041666668
anchor_right = -0.00041666668
offset_left = 61.0
offset_top = 38.0
offset_right = 1760.0
offset_bottom = 1031.0
theme = ExtResource("1_ej6pq")
texture = SubResource("AtlasTexture_jyko4")
script = ExtResource("3_uhph8")
choices = Dictionary[String, Callable]({
"Test long text": Callable(),
"Test1": Callable()
})
title = "Big bad encounter!"
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Harum nobis ut et fuga. Et voluptas asperiores eveniet. Illum commodi maiores ut consequuntur sunt. Veniam rem consequatur delectus optio. Error sint voluptas nulla ad quia eius ut maiores. A sint quisquam laborum laboriosam est natus.
Porro aut itaque quo corporis. Totam labore dolor quam numquam aperiam quae et. Asperiores repellat cumque eligendi voluptatem laboriosam. Aut tenetur tempore nemo.

123456789
"
metadata/_edit_horizontal_guides_ = [38.0]
metadata/_edit_vertical_guides_ = [61.0]

[node name="Title" type="Label" parent="." unique_id=1421674240]
texture_filter = 2
layout_mode = 0
offset_left = 124.0
offset_top = 57.0
offset_right = 747.0
offset_bottom = 162.0
theme = ExtResource("1_ej6pq")
theme_override_font_sizes/font_size = 48
text = "Big bad encounter!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextLeft" type="RichTextLabel" parent="." unique_id=335422687]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 130.0
offset_top = 175.0
offset_right = 767.0
offset_bottom = 165.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Harum"

[node name="TextRight" type="RichTextLabel" parent="." unique_id=275714967]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -765.0
offset_top = 71.0
offset_right = -112.0
offset_bottom = -252.0
text = "nobis ut et fuga. Et voluptas asperiores eveniet. Illum commodi maiores ut consequuntur sunt. Veniam rem consequatur delectus optio. Error sint voluptas nulla ad quia eius ut maiores. A sint quisquam laborum laboriosam est natus.
Porro aut itaque quo corporis. Totam labore dolor quam numquam aperiam quae et. Asperiores repellat cumque eligendi voluptatem laboriosam. Aut tenetur tempore nemo.

123456789
"
